<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Columbus</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_login">Log In</string>
    <string name="title_activity_exhibit">ExhibitActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_exhibit_list">ExhibitListActivity</string>
    <string name="exhibit_title_default">Exhibit Title</string>
    <string name="exhibit_desc_default">Short description of this exhibit with ellipses</string>
    <string name="title_activity_museum">Museums</string>
    <string name="title_activity_login">Login</string>
    <string name="default_distance">0 ft</string>
    <string name="item_comment_default_username">Username</string>
    <string name="item_comment_default_created_at">Yesterday</string>
    <string name="item_comment_default_comment">Comment</string>
    <string name="menu_create_comment">Comment</string>
    <string name="title_activity_exhibit_create_comment">ExhibitCreateCommentActivity</string>
    <string name="exhibit_create_comment_text_view_hint">Enter a comment</string>
    <string name="exhibit_create_comment_button_post">Post</string>
    <string name="exhibit_create_comment_button_cancel">Cancel</string>
  <string name="media_player_loading">Loading audio tour...</string>
  <string name="create_comment_title">How likely are you to recommend this exhibit to a friend?</string>
  <string name="create_comment_leave_comment">What do you think about this exhibit?</string>
    <string name="title_activity_search">SearchActivity</string>

</resources>
