<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exhibit_title_default"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:id="@+id/tvExhibitTitle"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/exhibit_title_default" />

    <TextView
        android:id="@+id/tvExhibitShortDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exhibit_desc_default"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_below="@+id/tvExhibitTitle"
        android:maxLines="2"
        android:ellipsize="end"
        android:textSize="14sp"
        android:textColor="#585858"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/ivExhibitImage"
        android:layout_toStartOf="@+id/ivExhibitImage" />

    <ImageView
        android:id="@+id/ivExhibitImage"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@null"
        android:layout_marginRight="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_distance"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:textSize="10sp"
        android:id="@+id/tvDistance"
        android:layout_below="@+id/tvExhibitShortDesc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
