<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

  <com.github.siyamed.shapeimageview.CircularImageView
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:id="@+id/ivProfile"
    android:src="@drawable/ic_login"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    app:siBorderWidth="1dp"
    app:siBorderColor="android:color/black_color"
    />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="@style/MyCustomTheme.TextAppearance.Medium.Circular"
    android:text="@string/item_comment_default_username"
    android:id="@+id/tvUsername"
    android:layout_alignParentTop="true"
    android:layout_toRightOf="@+id/ivProfile"
    android:layout_marginLeft="5dp"
    android:layout_toEndOf="@+id/ivProfile"
    android:layout_marginTop="5dp"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceSmall"
    android:text="@string/item_comment_default_created_at"
    android:id="@+id/tvCreatedAt"
    android:textColor="@color/custom_gray_light"
    android:layout_below="@+id/tvUsername"
    android:layout_alignLeft="@+id/tvUsername"
    android:layout_alignStart="@+id/tvUsername"/>

  <RatingBar
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/rbRating"
    android:isIndicator="true"
    style="?android:attr/ratingBarStyleSmall"
    android:layout_alignParentTop="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:layout_marginTop="5dp"/>

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/item_comment_default_comment"
    android:id="@+id/tvComment"
    android:textAppearance="@style/MyCustomTheme.TextAppearance.Medium.Circular"
    android:layout_below="@+id/tvCreatedAt"
    android:layout_alignLeft="@+id/tvCreatedAt"
    android:layout_alignStart="@+id/tvCreatedAt"
    android:layout_marginTop="15dp"/>

</RelativeLayout>